[package]
name = "prometheus-rsync-net-exporter"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
metrics-exporter-prometheus = { version = "0.18", features = ["http-listener"] }
metrics = "0.24"
ssh2 = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
anyhow = "1.0"

[dev-dependencies]
temp-env = "0.3.6"
